# qc803-project-argb

./: .gitignore  README.md  experiments.ipynb  getting_started.ipynb  notebook.ipynb  pyproject.toml
data/: hadamard.pkl  n1.pkl  n2.pkl  n2_new.pkl  num_measurements.pkl  only_error_correct.pkl
src/example_package/: example.py
src/shor_code_package/: experiments.py  shor_code.py
tests/: test_example.py  test_shor_package.py
