[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Concatenated Shor codes"
version = "1.0.0"
description = "This projecet implements concatenated Shor codes using Qiskit."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "August Rumle Gersholm Brask", email = "aubra25@student.sdu.dk"},
]
keywords = ["Shor code"]

dependencies = [
  "qiskit",
  "pytest",
  "numpy",
  "matplotlib",
  "pylatexenc",
  "sympy",
  "qiskit-aer",
  "ipykernel"
]

[tool.hatch.build.targets.wheel]
packages = ["src/shor_code_package"]